--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,10 @@ body {
   position: relative;
   display: flex;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* stylelint-disable value-list-comma-newline-after */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  /* stylelint-enable */
   font-size: 14px;
   color: #333;
   box-sizing: border-box;
