--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,8 @@ body {
   display: flex;
 
   /* stylelint-disable value-list-comma-newline-after */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   /* stylelint-enable */
   font-size: 14px;
   color: #333;
